Trying to fix  a weird ios spacing issues

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -23,17 +23,23 @@
 
                 img {
                     height : 100%;
+                    max-height: 100%;
                     width: 100%;
+                    max-width: 100%;
                 }
             }
 
             .card-barcode { 
                     height: 100%;
+                    max-height: 100%;
                     width : 100%;
- 
-                    svg {
+                    max-width: 100%;
+
+                    svg { 
                         height : 100%;
+                        max-height: 100%;
                         width : 100%;
+                        max-width: 100%;
                     }
             }
         }
